# august-mark

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_ORDER.md  FILE_STRUCTURE.md  IMPLEMENTATION_TASKS.md  MODULE_DEPENDENCY_GRAPH.md  MVP_IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  README.md  index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  OverlayApp.vue  index.css  main.ts  overlay.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: v001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: aacp_cmds.rs  app_cmds.rs  capture_cmds.rs  export_cmds.rs  gdrive_cmds.rs  issue_cmds.rs  mod.rs  project_cmds.rs  search_cmds.rs  session_cmds.rs  settings_cmds.rs  tag_cmds.rs
src-tauri/src/db/: capture_repo.rs  connection.rs  issue_repo.rs  migrations.rs  mod.rs  project_repo.rs  session_repo.rs  settings_repo.rs  tag_repo.rs
src-tauri/src/models/: aacp.rs  capture.rs  gdrive.rs  issue.rs  mod.rs  project.rs  session.rs  settings.rs
src-tauri/src/services/: aacp_exporter.rs  backup_service.rs  export_html.rs  export_service.rs  file_storage.rs  gdrive_client.rs  git_inspector.rs  image_processor.rs  mod.rs  mouse_hook.rs  screen_capture.rs
src-tauri/src/utils/: id.rs  mod.rs  paths.rs
src/components/common/: AppHeader.vue  AppSidebar.vue  ConfirmDialog.vue  EmptyState.vue
src/composables/: useAnnotation.ts  useCanvas.ts  useI18n.ts  useTauriEvents.ts
src/plugins/: contrast-fix.css  vuetify.ts
src/router/: index.ts
src/services/: tauriCommands.ts  tauriEvents.ts
src/stores/: issueStore.ts  overlayStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts  tagStore.ts  uiStore.ts
src/types/: aacp.ts  annotation.ts  capture.ts  issue.ts  project.ts  session.ts
src/utils/: date.ts  geometry.ts  image.ts
src/views/: AboutView.vue  DashboardView.vue  IssueView.vue  SessionView.vue  SettingsView.vue
(+12 files in other folders)
