[package]
name = "august-mark"
version = "0.1.1"
description = "August Mark — Mark everything, review later."
authors = []
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This is because auto-targets are enabled by default in Rust 1.67 (see
# https://blog.rust-lang.org/2023/03/12/Rust-1.68.0.html#cargos-automatic-target-discovery
# for more info).
name = "august_mark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

xcap = "0.3"
image = "0.25"
rdev = "0.5"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling, UUIDs & Datetime
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# SQLite Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime helpers
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"

# Base64 Encoding
base64 = "0.22"

# Network & Web APIs for Google Drive
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
tiny_http = "0.12"
url = "2"

# Compression for backups
zip = { version = "1.0", default-features = false, features = ["deflate"] }

[profile.release]
# Optimize binary size. Use this in production.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3
